cmake_minimum_required(VERSION 3.9.1)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(gooseDB)
add_library(http_tcp_linux ./HTTP_/src/http_tcp_linux.cc ./HTTP_/include/http_tcp_linux.h)
add_library(kvs_lib ./kvs/src/kvs.cc ./kvs/include/kvs.h)
add_library(gooseDB ./include/gooseDB.h ./src/gooseDB.cc)
add_executable(gooseDB_server1 ./src/gooseDB_server1.cc)
target_link_libraries(gooseDB_server1 http_tcp_linux)
target_link_libraries(gooseDB_server1 kvs_lib)
target_link_libraries(gooseDB_server1 gooseDB)
